# ak-acl

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  docker-compose.yaml
.github/workflows/: ak-acl-image.yml
cmd/: ak-acl_cmd_create-application.cc  ak-acl_cmd_create-user.cc
db/: schema.sql
db/fixtures/: sample-data.sql
db/migrations/: 20260503020141_001_init.sql
src/: ak-acl.cc
src/ak_acl/: utils.cpp  utils.hpp
src/ak_acl/handlers/: auth.cpp  auth.hpp  inventory.cpp  inventory.hpp  management.cpp  management.hpp  middlewares.cpp  middlewares.hpp
src/ak_acl/handlers/auth/: utils.cpp  utils.hpp
views/: AuthSignIn.cc  AuthSignIn.csp  AuthSignIn.h  ManagementEmployeeControl.cc  ManagementEmployeeControl.csp  ManagementEmployeeControl.h  ManagementEmployeeControlCreate.cc  ManagementEmployeeControlCreate.csp  ManagementEmployeeControlCreate.h  ManagementEmployeeControlList.cc  ManagementEmployeeControlList.csp  ManagementEmployeeControlList.h
